// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wxml > processWxml case bind > components 1`] = `{}`;

exports[`wxml > processWxml case bind > deps 1`] = `[]`;

exports[`wxml > processWxml case bind case 0 > components 1`] = `{}`;

exports[`wxml > processWxml case bind case 0 > deps 1`] = `[]`;

exports[`wxml > processWxml case bind case 1 > components 1`] = `{}`;

exports[`wxml > processWxml case bind case 1 > deps 1`] = `[]`;

exports[`wxml > processWxml case bind case 2 > components 1`] = `{}`;

exports[`wxml > processWxml case bind case 2 > deps 1`] = `[]`;

exports[`wxml > processWxml case capture-bind > components 1`] = `{}`;

exports[`wxml > processWxml case capture-bind > deps 1`] = `[]`;

exports[`wxml > processWxml case capture-catch > components 1`] = `{}`;

exports[`wxml > processWxml case capture-catch > deps 1`] = `[]`;

exports[`wxml > processWxml case catch > components 1`] = `{}`;

exports[`wxml > processWxml case catch > deps 1`] = `[]`;

exports[`wxml > processWxml case catch case 0 > components 1`] = `{}`;

exports[`wxml > processWxml case catch case 0 > deps 1`] = `[]`;

exports[`wxml > processWxml case catch case 1 > components 1`] = `{}`;

exports[`wxml > processWxml case catch case 1 > deps 1`] = `[]`;

exports[`wxml > processWxml case inline > components 1`] = `{}`;

exports[`wxml > processWxml case inline > deps 1`] = `[]`;

exports[`wxml > processWxml case inline 1`] = `
"<view>{{test.foo}}</view>

<wxs module="test" >
module.exports.foo = module.exports.bbc = module.exports.bar = module.exports.abc = void 0;
var _require = require("./index.wxs"),
  bar = module.exports.bar = _require.bar,
  foo = module.exports.foo = _require.foo;
var bbc = module.exports.bbc = require('./bbc.wxs');
var abc = module.exports.abc = 'abc';
</wxs>"
`;

exports[`wxml > processWxml case mut-bind > components 1`] = `{}`;

exports[`wxml > processWxml case mut-bind > deps 1`] = `[]`;

exports[`wxml > processWxml components case 0 > components 1`] = `
{
  "ABAB": [
    {
      "end": 13,
      "start": 0,
    },
  ],
}
`;

exports[`wxml > processWxml components case 0 > deps 1`] = `[]`;

exports[`wxml > processWxml components case 1 > components 1`] = `
{
  "t-button": [
    {
      "end": 105,
      "start": 51,
    },
    {
      "end": 160,
      "start": 108,
    },
    {
      "end": 201,
      "start": 163,
    },
    {
      "end": 314,
      "start": 242,
    },
    {
      "end": 386,
      "start": 317,
    },
  ],
}
`;

exports[`wxml > processWxml components case 1 > deps 1`] = `[]`;

exports[`wxml > processWxml components case 2 > components 1`] = `
{
  "t-divider": [
    {
      "end": 12,
      "start": 0,
    },
  ],
}
`;

exports[`wxml > processWxml components case 2 > deps 1`] = `[]`;

exports[`wxml > processWxml components case 3 > components 1`] = `
{
  "t-divider": [
    {
      "end": 16,
      "start": 0,
    },
  ],
}
`;

exports[`wxml > processWxml components case 3 > deps 1`] = `[]`;

exports[`wxml > processWxml components case 4 > components 1`] = `
{
  "HiChina": [
    {
      "end": 245,
      "start": 226,
    },
  ],
  "icebreaker": [
    {
      "end": 271,
      "start": 246,
    },
  ],
  "t-button": [
    {
      "end": 304,
      "start": 272,
    },
  ],
  "t-divider": [
    {
      "end": 317,
      "start": 305,
    },
  ],
  "t-fab": [
    {
      "end": 344,
      "start": 318,
    },
  ],
  "t-input": [
    {
      "end": 393,
      "start": 374,
    },
  ],
  "t-link": [
    {
      "end": 373,
      "start": 345,
    },
  ],
}
`;

exports[`wxml > processWxml components case 4 > deps 1`] = `[]`;

exports[`wxml > processWxml components case 5 > components 1`] = `
{
  "t-divider": [
    {
      "end": 13,
      "start": 1,
    },
  ],
  "t-fab": [
    {
      "end": 40,
      "start": 14,
    },
  ],
}
`;

exports[`wxml > processWxml components case 5 > deps 1`] = `[]`;

exports[`wxml > processWxml deps case 0 > components 1`] = `{}`;

exports[`wxml > processWxml deps case 0 > deps 1`] = `
[
  {
    "attrs": {
      "src": "xx.wxs.ts",
    },
    "end": 20,
    "name": "src",
    "quote": """,
    "start": 5,
    "tagName": "wxs",
    "value": "xx.wxs.ts",
  },
]
`;

exports[`wxml > processWxml deps case 1 > components 1`] = `{}`;

exports[`wxml > processWxml deps case 1 > deps 1`] = `
[
  {
    "attrs": {
      "src": "xx.wxs.ts",
    },
    "end": 20,
    "name": "src",
    "quote": """,
    "start": 5,
    "tagName": "wxs",
    "value": "xx.wxs.ts",
  },
]
`;

exports[`wxml > scanWxml case bind > components 1`] = `{}`;

exports[`wxml > scanWxml case bind > deps 1`] = `[]`;

exports[`wxml > scanWxml case bind case 0 > components 1`] = `{}`;

exports[`wxml > scanWxml case bind case 0 > deps 1`] = `[]`;

exports[`wxml > scanWxml case bind case 1 > components 1`] = `{}`;

exports[`wxml > scanWxml case bind case 1 > deps 1`] = `[]`;

exports[`wxml > scanWxml case bind case 2 > components 1`] = `{}`;

exports[`wxml > scanWxml case bind case 2 > deps 1`] = `[]`;

exports[`wxml > scanWxml case capture-bind > components 1`] = `{}`;

exports[`wxml > scanWxml case capture-bind > deps 1`] = `[]`;

exports[`wxml > scanWxml case capture-catch > components 1`] = `{}`;

exports[`wxml > scanWxml case capture-catch > deps 1`] = `[]`;

exports[`wxml > scanWxml case catch > components 1`] = `{}`;

exports[`wxml > scanWxml case catch > deps 1`] = `[]`;

exports[`wxml > scanWxml case catch case 0 > components 1`] = `{}`;

exports[`wxml > scanWxml case catch case 0 > deps 1`] = `[]`;

exports[`wxml > scanWxml case catch case 1 > components 1`] = `{}`;

exports[`wxml > scanWxml case catch case 1 > deps 1`] = `[]`;

exports[`wxml > scanWxml case inline > components 1`] = `{}`;

exports[`wxml > scanWxml case inline > deps 1`] = `[]`;

exports[`wxml > scanWxml case inline 1`] = `
"<view>{{test.foo}}</view>

<wxs module="test" >
module.exports.foo = module.exports.bbc = module.exports.bar = module.exports.abc = void 0;
var _require = require("./index.wxs"),
  bar = module.exports.bar = _require.bar,
  foo = module.exports.foo = _require.foo;
var bbc = module.exports.bbc = require('./bbc.wxs');
var abc = module.exports.abc = 'abc';
</wxs>"
`;

exports[`wxml > scanWxml case mut-bind > components 1`] = `{}`;

exports[`wxml > scanWxml case mut-bind > deps 1`] = `[]`;

exports[`wxml > scanWxml components case 0 > components 1`] = `
{
  "ABAB": [
    {
      "end": 13,
      "start": 0,
    },
  ],
}
`;

exports[`wxml > scanWxml components case 0 > deps 1`] = `[]`;

exports[`wxml > scanWxml components case 1 > components 1`] = `
{
  "t-button": [
    {
      "end": 105,
      "start": 51,
    },
    {
      "end": 160,
      "start": 108,
    },
    {
      "end": 201,
      "start": 163,
    },
    {
      "end": 314,
      "start": 242,
    },
    {
      "end": 386,
      "start": 317,
    },
  ],
}
`;

exports[`wxml > scanWxml components case 1 > deps 1`] = `[]`;

exports[`wxml > scanWxml components case 2 > components 1`] = `
{
  "t-divider": [
    {
      "end": 12,
      "start": 0,
    },
  ],
}
`;

exports[`wxml > scanWxml components case 2 > deps 1`] = `[]`;

exports[`wxml > scanWxml components case 3 > components 1`] = `
{
  "t-divider": [
    {
      "end": 16,
      "start": 0,
    },
  ],
}
`;

exports[`wxml > scanWxml components case 3 > deps 1`] = `[]`;

exports[`wxml > scanWxml components case 4 > components 1`] = `
{
  "HiChina": [
    {
      "end": 245,
      "start": 226,
    },
  ],
  "icebreaker": [
    {
      "end": 271,
      "start": 246,
    },
  ],
  "t-button": [
    {
      "end": 304,
      "start": 272,
    },
  ],
  "t-divider": [
    {
      "end": 317,
      "start": 305,
    },
  ],
  "t-fab": [
    {
      "end": 344,
      "start": 318,
    },
  ],
  "t-input": [
    {
      "end": 393,
      "start": 374,
    },
  ],
  "t-link": [
    {
      "end": 373,
      "start": 345,
    },
  ],
}
`;

exports[`wxml > scanWxml components case 4 > deps 1`] = `[]`;

exports[`wxml > scanWxml components case 5 > components 1`] = `
{
  "t-divider": [
    {
      "end": 13,
      "start": 1,
    },
  ],
  "t-fab": [
    {
      "end": 40,
      "start": 14,
    },
  ],
}
`;

exports[`wxml > scanWxml components case 5 > deps 1`] = `[]`;

exports[`wxml > scanWxml deps case 0 > components 1`] = `{}`;

exports[`wxml > scanWxml deps case 0 > deps 1`] = `
[
  {
    "attrs": {
      "src": "xx.wxs.ts",
    },
    "end": 20,
    "name": "src",
    "quote": """,
    "start": 5,
    "tagName": "wxs",
    "value": "xx.wxs.ts",
  },
]
`;

exports[`wxml > scanWxml deps case 1 > components 1`] = `{}`;

exports[`wxml > scanWxml deps case 1 > deps 1`] = `
[
  {
    "attrs": {
      "src": "xx.wxs.ts",
    },
    "end": 20,
    "name": "src",
    "quote": """,
    "start": 5,
    "tagName": "wxs",
    "value": "xx.wxs.ts",
  },
]
`;
